Fix buttons visibility on ProductBox

--- a/src/components/common/ProductBox/ProductBox.module.scss
+++ b/src/components/common/ProductBox/ProductBox.module.scss
@@ -14,6 +14,7 @@
       position: center;
       repeat: no-repeat;
     }
+
     overflow: hidden;
     align-items: flex-end;
 
@@ -27,11 +28,15 @@
       color: #ffffff;
       padding: 30px 15px 5px 15px;
     }
-
-    .buttons {
-      display: flex;
-      justify-content: space-between;
-    }
+  }
+  .buttons {
+    display: flex;
+    justify-content: space-between;
+  }
+  .buttonsHidden {
+    display: flex;
+    visibility: hidden;
+    justify-content: space-between;
   }
 
   .content {
@@ -74,5 +79,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+
+  .isShownPrice {
+    background-color: $primary;
   }
 }
